[gd_scene load_steps=6 format=3 uid="uid://onx73o1xauw1"]

[ext_resource type="Script" path="res://scripts/note.gd" id="1_1d3oq"]
[ext_resource type="Texture2D" uid="uid://4apnaumhw1hi" path="res://assets/notes/right_foot.png" id="1_20dwn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dgrk2"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llabs"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0d85"]
size = Vector2(5, 5)

[node name="Note" type="Node2D"]
script = ExtResource("1_1d3oq")

[node name="NotePicture" type="Sprite2D" parent="."]
texture = ExtResource("1_20dwn")

[node name="PoorRating" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PoorRating"]
shape = SubResource("RectangleShape2D_dgrk2")

[node name="GoodRating" type="Area2D" parent="."]
position = Vector2(0, -1)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoodRating"]
shape = SubResource("RectangleShape2D_llabs")

[node name="PerfectRating" type="Area2D" parent="."]
position = Vector2(0, -2)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerfectRating"]
shape = SubResource("RectangleShape2D_q0d85")

[connection signal="area_entered" from="PoorRating" to="." method="_on_poor_rating_area_entered"]
[connection signal="area_exited" from="PoorRating" to="." method="_on_poor_rating_area_exited"]
[connection signal="area_entered" from="GoodRating" to="." method="_on_good_rating_area_entered"]
[connection signal="area_exited" from="GoodRating" to="." method="_on_good_rating_area_exited"]
[connection signal="area_entered" from="PerfectRating" to="." method="_on_perfect_rating_area_entered"]
[connection signal="area_exited" from="PerfectRating" to="." method="_on_perfect_rating_area_exited"]
